src/main/metadata-au/objects/Lead_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Type__c</fullName>
        <label>Customer Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Item__c</fullName>
        <label>Lead Product Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Items__c</fullName>
        <label>Lead Product Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ', 
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP','NA'))))</defaultValue>
        <label>MD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Information__c</fullName>
        <label>Order Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordered_against_Factory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ordered against Factory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Offer__c</fullName>
        <label>Product Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Service plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Finance &amp; Insurance offer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quote_Information__c</fullName>
        <label>Quote Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Live__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quote Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for someone else</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Meeting Metro Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Visit reporting penetration and volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd visit (leads) update on leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th follow up or touch base</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lead Product</label>
    <listViews>
        <fullName>Active_Quote_List_View</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Product_Offer__c</columns>
        <columns>Quote_Information__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Live__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Product__c.Quote</value>
        </filters>
        <label>Active Quote List View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Customer_Contact</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Product_Offer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Product__c.Customer_Contact</value>
        </filters>
        <label>Customer Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Quote_List_View</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Offer__c</columns>
        <columns>Quote_Information__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Live__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Product__c.Quote</value>
        </filters>
        <label>Inactive Quote List View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Orders</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Product_Offer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead_Product__c.Order</value>
        </filters>
        <label>Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lead Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <recordTypes>
        <fullName>Customer_Contact</fullName>
        <active>true</active>
        <label>Customer Contact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <label>Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>  